--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -19,4 +19,17 @@
     <string name="password">password</string>
     <string name="notice_device">Notice the device</string>
     <string name="manage_check_times">Manage the check times</string>
+    <string name="enter_password">EnterPassword</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="Editing">Редактирование</string>
+    <string name="Viewing">Просмотр</string>
+    <string name="Filling">Filling</string>
 </resources>
